crates/uitest/fixtures/mir_check/move_view_param_zst_call.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/move_view_param_zst_call.fe
---
error[10-0002]: move conflict in `fn example`
  ┌─ move_view_param_zst_call.fe:7:12
  │
7 │ fn example(a: Foo, b: Foo) -> (Foo, Foo) {
  │            ^^^^^^ cannot assign to a value after it was moved
8 │     make_pair2(a, b)
  │                - `tmp_spill3` is moved here
